# High-speed-USB-based-on-STM32

./: .mxproject  USB_Project.ioc
Core/Inc/: stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_it.c  usart.c
MDK-ARM/: .clangd  USB_Project+USBProject.cbuild.yml  USB_Project.cbuild-idx.yml  USB_Project.cbuild-pack.yml  USB_Project.cbuild-set.yml  USB_Project.cproject.yml  USB_Project.csolution.yml  USB_Project.uvguix.void  USB_Project.uvoptx  USB_Project.uvprojx  startup_stm32f405xx.lst
MDK-ARM/RTE/_USB_Project/: RTE_Components.h
MDK-ARM/USB_Project/: USB_Project.axf  USB_Project.build_log.htm  USB_Project.hex  USB_Project.htm  USB_Project.lnp  USB_Project.map  USB_Project_USB_Project.dep  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f405xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.crf  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.crf  stm32f4xx_hal_gpio.d  stm32f4xx_hal_msp.crf  stm32f4xx_hal_msp.d  stm32f4xx_hal_pcd.crf  stm32f4xx_hal_pcd.d  stm32f4xx_hal_pcd_ex.crf  stm32f4xx_hal_pcd_ex.d  stm32f4xx_hal_pwr.crf  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.crf  stm32f4xx_hal_pwr_ex.d  (+34 more)
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/USB_Project+USBProject/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
MDK-ARM/tmp/USB_Project+USBProject/src/USB_Project+USBProject-stamp/: USB_Project+USBProject-configure-.cmake  USB_Project+USBProject-source_dirinfo.txt
MDK-ARM/tmp/USB_Project+USBProject/tmp/: USB_Project+USBProject-cfgcmd.txt  USB_Project+USBProject-mkdirs.cmake
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
USB_DEVICE/App/: usb_device.c  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c
原理图/: 高速USB.epro
